# homelab

./: .gitignore  README.md
apps/flask_hello/: Makefile  pyproject.toml
apps/flask_hello/flask_hello/: main.py
apps/flask_hello/tests/: test_flask_hello.py
apps/github_webhook/: main.py  pyproject.toml
k8s/bootstrap/: Makefile  README.md  kustomization.yaml
k8s/bootstrap/argocd/: ingress.yaml  kustomization.yaml
k8s/bootstrap/cloudflare/: kustomization.yaml
k8s/bootstrap/demo-app/: deployment--demo.yaml  ingress--demo.yaml  kustomization.yaml  service--demo.yaml
k8s/bootstrap/metallb/: kustomization.yaml
k8s/bootstrap/nginx/: deployment.patch.yaml  kustomization.yaml
k8s/bootstrap/sealed-secrets/: kustomization.yaml
k8s/gitops/: Makefile  README.md  kustomization.yaml
k8s/gitops/argo/: Makefile  github-event-source.yaml  ingress.yaml  kustomization.yaml
k8s/gitops/argo-events/: Makefile  github-event.yaml  ingress.yaml  kustomization.yaml
k8s/gitops/minio/: Makefile  ingress.yaml  kustomization.yaml  statefulset.patch.yaml
k8s/misc/istio/: README.md  create_cert_secret.sh  gateway.yaml  ingress.yaml  ingress_gateway.sh  kustomization.yaml
k8s/misc/minikube/: README.md  install_brew_deps.sh  install_docker.sh
k8s/misc/test/: Makefile  kustomization.yaml  main.tf
k8s/misc/test/certmanager/: issuer--letsencrypt-staging.yml
k8s/misc/test/misc/: deployment--http-svc.yml  ingress--nginx.yml  kustomization.yaml  secret--cloudflare-api-key-secret.yml  service--http-svc.yml
k8s/misc/test/misc/old/: deployment.yaml  service.yaml
