[tool.poetry]
name = "flask_hello"
version = "0.1.0"
description = ""
authors = ["James Hounshell <jameshounshell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
certifi = "^2021.10.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
